repear package.json

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node idex.js",
+    "start": "node index.js",
     "dev": "nodemon index.js",
     "build:ui": "cd.. && rmdir /s /q dist && npm run build && xcopy dist server\\dist /E /H /C /I /Y",
 
