--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,6 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "build:ui": "cd.. && rmdir /s /q dist && npm run build && xcopy dist server\\dist /E /H /C /I /Y",
-
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Marko",
@@ -17,6 +16,7 @@
     "body-parser": "^1.20.2",
     "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
