--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 SECRET = 'asdfghj'
-MONGODB_URL = mongodb+srv://mandlimarko:llFFCsW6CG6qnXTN@cluster0.el43xlc.mongodb.net/prore?retryWrites=true&w=majority
+MONGODB_URL = 'mongodb://127.0.0.1/finder'
 GOOGLE_MAP = 'AIzaSyBDA2EBoGezJx51wQtxoW3Ecq5Ql8CCAiE'
