--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vuepic/vue-datepicker": "^4.1.0",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "date-fns": "^2.29.3",
     "heroku": "^7.3.0",
     "mdb-vue-ui-kit": "^3.2.0",
     "vue": "^3.2.13",
