--- a/.gitignore
+++ b/.gitignore
@@ -9,17 +9,17 @@ node_modules
 .env.test
 
 
-# local env files
+# local env client
 .env.local
 .env.*.local
 
-# Log files
+# Log client
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Editor directories and files
+# Editor directories and client
 .idea
 .vscode
 *.suo
