--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@vuepic/vue-datepicker": "^4.1.0",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "date-fns": "^2.29.3",
     "heroku": "^7.3.0",
     "mdb-vue-ui-kit": "^3.2.0",
-    "vue": "^3.2.13",
+    "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
