--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "dependencies": {
     "@vuepic/vue-datepicker": "^4.1.0",
+    "agora-rtm-sdk": "^1.6.0-205",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "date-fns": "^2.29.3",
+    "dateformat": "^5.0.3",
     "heroku": "^7.3.0",
     "mdb-vue-ui-kit": "^3.2.0",
+    "primevue": "^3.32.2",
+    "pusher-js": "^8.0.2",
+    "socket.io-client": "^4.6.2",
+    "uuid": "^9.0.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue-spinner": "^1.0.4",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -40,7 +48,9 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {
+      "vue/multi-word-component-names": "off"
+    }
   },
   "browserslist": [
     "> 1%",
