--- a/server/package.json
+++ b/server/package.json
@@ -12,15 +12,19 @@
   "author": "Marko",
   "license": "ISC",
   "dependencies": {
+    "agora-access-token": "^2.0.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "connect-history-api-fallback": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "pusher": "^5.1.3",
+    "socket.io": "^4.6.2"
   }
 }
