--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.29.3",
     "dateformat": "^5.0.3",
     "heroku": "^7.3.0",
+    "lightgallery": "^2.7.2",
     "mdb-vue-ui-kit": "^3.2.0",
     "primevue": "^3.32.2",
     "pusher-js": "^8.0.2",
@@ -34,7 +35,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
+    "sass": "^1.72.0",
+    "sass-loader": "^10.5.2"
   },
   "eslintConfig": {
     "root": true,
