--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "heroku": "^7.3.0",
     "lightgallery": "^2.7.2",
     "mdb-vue-ui-kit": "^3.2.0",
-    "primevue": "^3.32.2",
+    "primevue": "^3.52.0",
     "pusher-js": "^8.0.2",
     "socket.io-client": "^4.6.2",
     "uuid": "^9.0.0",
     "vue": "^3.3.7",
     "vue-router": "^4.1.6",
+    "vue-search-select": "^3.2.0",
     "vue-spinner": "^1.0.4",
     "vue3-carousel": "^0.3.1",
     "vuelidate": "^0.7.7"
