Update about secrets / googleAuth

--- a/server/.env
+++ b/server/.env
@@ -6,7 +6,8 @@ TWILIO_SID = 'AC981879b60cac050d4094e17ff567a903'
 TWILIO_AUTH_TOKEN = '7a557adaaa34c74626fc18acaaa08490'
 TWILIO_PHONE_NUMBER = '+17066076334'
 
-
+GOOGLE_CLIENT_ID = '359901037732-2jilg1shqd0md47hjrilsb7p84k46h9u.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET = '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'
 
 GOOGLE_MAP = 'AIzaSyAQPLmTMlmSTp4spxPwvaJLnzYnkLmZ9zc'
 
