--- a/server/.env
+++ b/server/.env
@@ -9,5 +9,7 @@ TWILIO_PHONE_NUMBER = '+17066076334'
 GOOGLE_CLIENT_ID = '359901037732-2jilg1shqd0md47hjrilsb7p84k46h9u.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET = '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'
 
+COOKIE_KEY = 'jlkjfdklajfdajiejijijfdf'
+
 GOOGLE_MAP = 'AIzaSyAQPLmTMlmSTp4spxPwvaJLnzYnkLmZ9zc'
 
