--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socket.io-client": "^4.6.2",
     "uuid": "^9.0.0",
     "vue": "^3.3.7",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.1.6",
     "vue-search-select": "^3.2.0",
     "vue-spinner": "^1.0.4",
