--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "core-js": "^3.8.3",
     "date-fns": "^2.29.3",
     "dateformat": "^5.0.3",
-    "heroku": "^7.3.0",
+    "heroku": "^9.2.1",
     "lightgallery": "^2.7.2",
     "mdb-vue-ui-kit": "^3.2.0",
     "primevue": "^3.52.0",
@@ -36,7 +36,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^9.0.0",
