--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "prore-mongo",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "18.14.1"
+  },
   "scripts": {
     "start": "node server/index.js",
 
