--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "express":"*",
+    "body-parser":"*",
     "@vuepic/vue-datepicker": "^4.1.0",
     "agora-rtm-sdk": "^1.6.0-205",
     "axios": "^1.3.4",
