--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "heroku-postbuild": "npm install --prefix server",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
