--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "eslint-plugin-vue": "^8.0.3",
     "@babel/eslint-parser": "^7.12.16",
 
+
+
+    "sass-loader": "^10.5.2",
+
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.1.6",
     "vue-search-select": "^3.2.0",
@@ -51,10 +55,8 @@
 
 
     "eslint": "^7.32.0",
-
     "node-sass": "^9.0.0",
-    "sass": "^1.72.0",
-    "sass-loader": "^10.5.2"
+    "sass": "^1.72.0"
   },
   "eslintConfig": {
     "root": true,
