--- a/package.json
+++ b/package.json
@@ -8,40 +8,35 @@
   },
   "scripts": {
     "start": "node server/index.js",
-
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "heroku-postbuild": "npm install --prefix server && npm install && npm run build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "express":"*",
-    "body-parser":"*",
+    "@babel/eslint-parser": "^7.12.16",
+    "@googlemaps/google-maps-services-js": "^3.4.0",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "@vuepic/vue-datepicker": "^4.1.0",
     "agora-rtm-sdk": "^1.6.0-205",
     "axios": "^1.3.4",
+    "body-parser": "*",
     "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
     "date-fns": "^2.29.3",
     "dateformat": "^5.0.3",
+    "eslint-plugin-vue": "^8.0.3",
+    "express": "*",
     "lightgallery": "^2.7.2",
     "mdb-vue-ui-kit": "^3.2.0",
     "primevue": "^3.52.0",
     "pusher-js": "^8.0.2",
+    "sass-loader": "^10.5.2",
     "socket.io-client": "^4.6.2",
     "uuid": "^9.0.0",
     "vue": "^3.3.7",
-
-    "@vue/cli-service": "^5.0.8",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "@babel/eslint-parser": "^7.12.16",
-
-
-
-    "sass-loader": "^10.5.2",
-
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.1.6",
     "vue-search-select": "^3.2.0",
@@ -51,9 +46,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-
-
-
     "eslint": "^7.32.0",
     "node-sass": "^9.0.0",
     "sass": "^1.72.0"
