Attempt to fix map

--- a/server/.env
+++ b/server/.env
@@ -12,5 +12,5 @@ GOOGLE_CLIENT_SECRET = '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'
 
 COOKIE_KEY = 'jlkjfdklajfdajiejijijfdf'
 
-GOOGLE_MAP = 'AIzaSyAQPLmTMlmSTp4spxPwvaJLnzYnkLmZ9zc'
+GOOGLE_MAP_KEY='AIzaSyDt2YXE5tk0J72JgqnH3DTD7MeoqbbWBmU'
 
