--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "pusher": "^5.1.3",
+    "serve-static": "^1.16.2",
     "socket.io": "^4.6.2",
     "twilio": "^5.1.0"
   }
