--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,10 @@
   "author": "Marko",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.777.0",
+    "@aws-sdk/s3-request-presigner": "^3.777.0",
     "agora-access-token": "^2.0.4",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "connect-history-api-fallback": "^2.0.0",
@@ -25,6 +28,7 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^2.0.20",
     "passport": "^0.7.0",
