--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/core": "^7.2.0",
     "@capacitor/geolocation": "^7.1.1",
     "@capacitor/ios": "^7.2.0",
+    "@capacitor/local-notifications": "^7.0.1",
     "@capacitor/push-notifications": "^7.0.1",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@googlemaps/google-maps-services-js": "^3.4.0",
@@ -36,6 +37,8 @@
     "dateformat": "^5.0.3",
     "eslint-plugin-vue": "^8.0.3",
     "express": "*",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
     "lightgallery": "^2.7.2",
     "mdb-vue-ui-kit": "^3.2.0",
     "primevue": "^3.52.0",
@@ -77,5 +80,10 @@
     "last 2 versions",
     "not dead",
     "not ie 11"
-  ]
+  ],
+  "description": "## Project setup ``` npm install ```",
+  "main": "babel.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
