--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase-admin": "^13.3.0",
     "heroku": "^10.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
